<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".locationreminders.ReminderDescriptionActivity">
        <!--: add the design of the reminder details-->
        <TextView
            android:id="@+id/reminderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{reminderDataItem.title}"
            android:textSize="24sp"
            tools:text="@string/reminder_title"/>
        <TextView
            android:id="@+id/reminderDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{reminderDataItem.description}"
            android:textSize="16sp"
            tools:text="@string/reminder_desc"/>
        <TextView
            android:id="@+id/reminderLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{reminderDataItem.location}"
            android:textSize="16sp"
            tools:text="@string/reminder_location"/>
    </LinearLayout>
</layout>